@@ -1168,7 +1168,7 @@ void KMMessage::viewSource(const QString aCaption) const
 //-----------------------------------------------------------------------------
 const QString KMMessage::stripEmailAddr(const QString aStr)
 {
-  int i, j;
+  int i, j, len;
   QString partA, partB, result;
   char endCh = '>';
 
@@ -1179,16 +1179,21 @@ const QString KMMessage::stripEmailAddr(const QString aStr)
     endCh = ')';
   }
   if (i<0) return aStr;
-  partA = aStr.left(i);
-  j = aStr.find(endCh,i);
+  partA = aStr.left(i).stripWhiteSpace();
+  j = aStr.find(endCh,i+1);
   if (j<0) return aStr;
-  partB = aStr.mid(i+1, j-i-1);
+  partB = aStr.mid(i+1, j-i-1).stripWhiteSpace();
 
-  if (partA.find('@') >= 0) 
-    result = partB.stripWhiteSpace();
-  else result = partA.stripWhiteSpace();
+  if (partA.find('@') >= 0 && !partB.isEmpty()) result = partB;
+  else if (!partA.isEmpty()) result = partA;
+  else result = aStr;
 
-  if (result[0]=='"' && result[result.length()-1]=='"')
+  len = result.length();
+  if (result[0]=='"' && result[len-1]=='"')
+    result = result.mid(1, result.length()-2);
+  else if (result[0]=='<' && result[len-1]=='>')
+    result = result.mid(1, result.length()-2);
+  else if (result[0]=='(' && result[len-1]==')')
     result = result.mid(1, result.length()-2);
   return result;
 }
